--- a/Netflx_recommendation_system.ipynb
+++ b/Netflx_recommendation_system.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
        "5         2004.0      The Rise and Fall of ECW"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
        "Father of the Bride Part II  Just when George Banks has recovered from his ...       173.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,16 +992,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(7000000, 5)"
+       "(7000000, 6)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1026,15 +1026,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape User-Ratings unfiltered:\t(7000000, 5)\n",
-      "Shape User-Ratings filtered:\t(302671, 5)\n"
+      "Shape User-Ratings unfiltered:\t(7000000, 6)\n",
+      "Shape User-Ratings filtered:\t(302671, 6)\n"
      ]
     }
    ],
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1087,15 +1087,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train shape: (242136, 5)\n",
-      "test shape: (60535, 5)\n"
+      "train shape: (242136, 6)\n",
+      "test shape: (60535, 6)\n"
      ]
     }
    ],
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -4729,7 +4729,7 @@
        "[5 rows x 1613 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4750,7 +4750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4772,7 +4772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -4788,7 +4788,7 @@
       "Estimating biases using als...\n",
       "Computing the pearson_baseline similarity matrix...\n",
       "Done computing similarity matrix.\n",
-      "0.9643820052410009\n",
+      "0.9639706837749834\n",
       "{'sim_options': {'name': 'pearson_baseline', 'user_based': True, 'min_support': 2, 'shrinkage': 60}, 'k': 80}\n"
      ]
     }
@@ -4814,7 +4814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -4866,7 +4866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -4878,7 +4878,7 @@
        " 'shrinkage': 60}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4898,14 +4898,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9204186660178566\n",
+      "0.9200212439016314\n",
       "{'n_factors': 10, 'lr_all': 0.006}\n"
      ]
     }
@@ -4926,24 +4926,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-36-8010d57996b6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m                    verbose=False)\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0msvdpp_best\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrainset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mtrain_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msvdpp_best\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrainset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuild_testset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/anaconda3/lib/python3.7/site-packages/surprise/prediction_algorithms/matrix_factorization.pyx\u001b[0m in \u001b[0;36msurprise.prediction_algorithms.matrix_factorization.SVDpp.fit\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m/anaconda3/lib/python3.7/site-packages/surprise/prediction_algorithms/matrix_factorization.pyx\u001b[0m in \u001b[0;36msurprise.prediction_algorithms.matrix_factorization.SVDpp.sgd\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m/anaconda3/lib/python3.7/site-packages/surprise/trainset.py\u001b[0m in \u001b[0;36mall_ratings\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    188\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mu\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_ratings\u001b[0m \u001b[0;32min\u001b[0m \u001b[0miteritems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mur\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    189\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mr\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mu_ratings\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 190\u001b[0;31m                 \u001b[0;32myield\u001b[0m \u001b[0mu\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    191\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    192\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mbuild_testset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "svdpp_best = sp.SVDpp(n_factors = gs.best_params['rmse']['n_factors'], \n",
     "                   lr_all = gs.best_params['rmse']['lr_all'],\n",
@@ -4960,113 +4945,11 @@
     "test_predicted = np.array([pred.est for pred in test_pred])\n",
     "\n",
     "rmse_train = np.sqrt(mean_squared_error(train_actual, train_predicted)) \n",
-    "r2_score_train = r2_score(train_actual, train_predicted)\n",
-    "rmse_test = np.sqrt(mean_squared_error(test_actual, test.mean(rating))) \n",
-    "r2_score_test = r2_score(test_actual, test_predicted)\n",
+    "rmse_test = np.sqrt(mean_squared_error(test_actual, test_predicted)) \n",
     "\n",
     "\n",
     "print(\"RMSE Train = {}\".format(rmse_train))\n",
-    "print(\"R2 Train = {}\".format(r2_score_train))\n",
-    "print(\"RMSE Test = {}\".format(rmse_test))\n",
-    "print(\"R2 Test = {}\".format(r2_score_test))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "242136"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(train_predicted)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "r = np.full((60535), 3.4939, dtype=int)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.4939621706450814"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test.rating.mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "60535"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(test_predicted)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rmse_test = np.sqrt(mean_squared_error(test_actual, r))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.1825665726235923"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rmse_test"
+    "print(\"RMSE Test = {}\".format(rmse_test))"
    ]
   },
   {
@@ -5080,7 +4963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -5095,13 +4978,13 @@
       "Use tf.cast instead.\n",
       "Train on 217922 samples, validate on 24214 samples\n",
       "Epoch 1/3\n",
-      "217922/217922 [==============================] - 11s 50us/step - loss: 1.3844 - val_loss: 0.8530\n",
+      "217922/217922 [==============================] - 14s 62us/step - loss: 1.3865 - val_loss: 0.8518\n",
       "Epoch 2/3\n",
-      "217922/217922 [==============================] - 10s 44us/step - loss: 0.8504 - val_loss: 0.8377\n",
+      "217922/217922 [==============================] - 10s 47us/step - loss: 0.8506 - val_loss: 0.8398\n",
       "Epoch 3/3\n",
-      "217922/217922 [==============================] - 10s 45us/step - loss: 0.8407 - val_loss: 0.8356\n",
-      "Train RMSE0.900801711544066\n",
-      "Test RMSE0.9300372365374917\n"
+      "217922/217922 [==============================] - 10s 48us/step - loss: 0.8408 - val_loss: 0.8427\n",
+      "Train RMSE0.9024547204982767\n",
+      "Test RMSE0.9307853586990787\n"
      ]
     }
    ],
@@ -5184,7 +5067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -5235,7 +5118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -5247,13 +5130,13 @@
       "Please use `rate` instead of `keep_prob`. Rate should be set to `rate = 1 - keep_prob`.\n",
       "Train on 94506 samples, validate on 10501 samples\n",
       "Epoch 1/3\n",
-      "94506/94506 [==============================] - 31s 327us/step - loss: 3.0721 - val_loss: 0.9767\n",
+      "94506/94506 [==============================] - 32s 336us/step - loss: 3.1179 - val_loss: 0.9885\n",
       "Epoch 2/3\n",
-      "94506/94506 [==============================] - 29s 309us/step - loss: 0.8933 - val_loss: 0.8639\n",
+      "94506/94506 [==============================] - 29s 303us/step - loss: 0.8891 - val_loss: 0.8780\n",
       "Epoch 3/3\n",
-      "94506/94506 [==============================] - 28s 301us/step - loss: 0.8315 - val_loss: 0.8531\n",
-      "Train RMSE0.8856469522281324\n",
-      "Test RMSE0.8954515826673022\n"
+      "94506/94506 [==============================] - 29s 302us/step - loss: 0.8262 - val_loss: 0.8659\n",
+      "Train RMSE0.8816089683493205\n",
+      "Test RMSE0.8946814444669692\n"
      ]
     }
    ],
@@ -5384,7 +5267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -5400,9 +5283,9 @@
       "__________________________________________________________________________________________________\n",
       "tfidf (InputLayer)              (None, 29319)        0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "user_embedding (Embedding)      (None, 1, 10)        44500       user[0][0]                       \n",
+      "user_embedding (Embedding)      (None, 1, 10)        88940       user[0][0]                       \n",
       "__________________________________________________________________________________________________\n",
-      "movie_embedding (Embedding)     (None, 1, 10)        16130       movie[0][0]                      \n",
+      "movie_embedding (Embedding)     (None, 1, 10)        31040       movie[0][0]                      \n",
       "__________________________________________________________________________________________________\n",
       "dense_3 (Dense)                 (None, 128)          3752960     tfidf[0][0]                      \n",
       "__________________________________________________________________________________________________\n",
@@ -5422,8 +5305,8 @@
       "__________________________________________________________________________________________________\n",
       "dense_6 (Dense)                 (None, 1)            513         dropout_1[0][0]                  \n",
       "==================================================================================================\n",
-      "Total params: 3,845,367\n",
-      "Trainable params: 3,845,367\n",
+      "Total params: 3,904,717\n",
+      "Trainable params: 3,904,717\n",
       "Non-trainable params: 0\n",
       "__________________________________________________________________________________________________\n"
      ]
@@ -5465,20 +5348,6 @@
     "- Improve deep learning approach\n",
     "- Use Sage Maker \n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
